# de_rclone_windows

./: .gitignore  LICENSE  QWEN.md  README.md  build-appimage-tauri.sh  installer.nsi  main.js  package-lock.json  package.json  preload.js
.github/workflows/: build-appimage.yml  build.yml
plugins/azureblob/: config.json
plugins/ftp/: config.json
plugins/s3/: config.json
plugins/sftp/: config.json
plugins/smb/: config.json
plugins/webdav/: config.json
renderer/: app.js  index.html  style.css  style.css.backup  test_cs16.html  test_local_cs16.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
