[package]
name = "de_rclone"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["wry"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
config = "0.14"
dirs = "5.0"

[dev-dependencies]
tauri-cli = "2.9.6"
